# WatcheRobot-Firmware

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.codex/: README.md  device-map.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
.memory/: MEMORY.md  architecture.md
docs/: architecture.md  getting-started.md  roadmap.md
docs/development/: codex-multi-device-workflow.md  known-issues.md  testing.md
docs/hardware/: bom.md  gpio-mapping.md
docs/protocol/: voice-stream.md  websocket-protocol.md
firmware/mcu/: README_DEPRECATED.md
firmware/s3/: .gitkeep  CMakeLists.txt  sdkconfig.defaults
firmware/s3/components/esp_lvgl_port/: esp_lvgl_port.c
firmware/s3/components/protocols/ws_client/: CMakeLists.txt  idf_component.yml
firmware/s3/components/protocols/ws_client/include/: ws_client.h  ws_handlers.h  ws_router.h
firmware/s3/components/protocols/ws_client/src/: ws_client.c  ws_handlers.c  ws_router.c
firmware/s3/components/sensecap-watcher/: Kconfig  sensecap-watcher.c
firmware/s3/components/services/voice_service/: CMakeLists.txt  idf_component.yml
firmware/s3/components/services/voice_service/include/: voice_service.h
firmware/s3/components/services/voice_service/src/: hal_wake_word.c  voice_fsm.c
firmware/s3/docs/: BLE_GATT_PROTOCOL_BRIDGE.md  COMM_PROTOCOL_FREEZE.md  COPROC_COMM_DEV_DESIGN.md  RELEASE_NOTE_v0.0.97dev.md  SERVER_GATEWAY_CAMERA_MEDIA_PROTOCOL.md
firmware/s3/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
firmware/s3/tools/: flash-monitor.ps1  generate_anim_assets.py  ws_camera_gateway_test.py
hardware/: .gitkeep
tools/: build_test.ps1  codex-device-map.ps1  flash.sh  import-sfx.ps1  png2rgba.py  run-lane.ps1
(+82 files in other folders)
